# cmake-test

./: CMakeLists.txt
.github/workflows/: ci.yaml
lib/: CMakeLists.txt
lib/src/: mylibrary.c
